<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainTopBar"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Botón a la izquierda -->
                <ImageButton
                    android:id="@+id/menuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparente"
                    android:contentDescription="@string/menu"
                    android:padding="8dp"
                    android:src="@drawable/menu"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Título centrado -->
                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/constelaciones"
                    android:textColor="@color/mainTitleTopBar"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/showData"
                    app:layout_constraintStart_toEndOf="@+id/menuButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Botón a la derecha -->

                <ImageButton
                    android:id="@+id/showData"
                    style="@style/iconos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/mostrar_ocultar_constelaciones"
                    android:padding="8dp"
                    android:src="@drawable/info"
                    app:layout_constraintBottom_toBottomOf="@id/toggleConstellationsButton"
                    app:layout_constraintEnd_toStartOf="@id/toggleConstellationsButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/toggleConstellationsButton"
                    style="@style/iconos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/mostrar_ocultar_constelaciones"
                    android:padding="8dp"
                    android:src="@drawable/filter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>


    <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/constList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</FrameLayout>