<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainTopBar"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Botón a la izquierda -->
                <ImageButton
                    android:id="@+id/leftButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/Transparente"
                    android:contentDescription="@string/filtrar_constelaciones"
                    android:padding="8dp"
                    android:src="@drawable/menu"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!-- Campo de texto (EditText) -->
                <EditText
                    android:id="@+id/campobuscar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/buscar"
                    android:inputType="text"
                    android:maxLength="10"
                    android:minHeight="48dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/gris4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/filtar"
                    app:layout_constraintStart_toEndOf="@id/leftButton"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Autofill" />

                <!-- Botón a la derecha -->
                <ImageButton
                    android:id="@+id/filtar"
                    style="@style/iconos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/mostrar_ocultar_constelaciones"
                    android:padding="8dp"
                    android:src="@drawable/filter"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck" />


                <ImageButton
                    android:id="@+id/addSelectionToUserList"
                    style="@style/iconos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/mostrar_ocultar_constelaciones"
                    android:padding="8dp"
                    android:src="@drawable/playlist_add_24px"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/iconos_TopTab"
                    tools:ignore="TouchTargetSizeCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dsosList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>